Site data source

--- a/develop/2017-01-03-ExperimentingWithCoalData.ipynb
+++ b/develop/2017-01-03-ExperimentingWithCoalData.ipynb
@@ -14,12 +14,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Detailed data from the EIA-7A and the U.S. Mine Safety and Health Administration from https://www.eia.gov/coal/data.php"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_excel(\"../data/coalpublic2014.xls\", header=2, index_col='MSHA ID')"
+    "df=pd.read_excel(\"../data/coalpublic2014.xls\", header=2, index_col='MSHA ID') "
    ]
   },
   {
